<resources>
    <string name="app_name">The Milky Way</string>

    <!-- placeholder strings -->
    <string name="placeholder_title">Some long image title that can overflow into the next line</string>
    <string name="placeholder_center">CENTRE</string>
    <string name="placeholder_date">2022\-05\-09</string>
    <string name="placeholder_description">An Image from the Milky Way</string>

    <string name="label_center">Center:</string>
    <string name="label_date">Date Created:</string>

    <string name="error_failed_to_load_photos">There was an error loading the photos</string>
</resources>