<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_background_color">

        <ImageView
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/placeholder_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/photo_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@id/photo_view">

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/image_title_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/placeholder_title" />

            <TextView
                android:id="@+id/photo_center_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/label_center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/image_details_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_title" />

            <TextView
                android:id="@+id/photo_center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/image_details_size"
                app:layout_constraintStart_toEndOf="@id/photo_center_label"
                app:layout_constraintTop_toTopOf="@id/photo_center_label"
                tools:text="@string/placeholder_center" />

            <TextView
                android:id="@+id/photo_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/label_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/image_details_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_center" />

            <TextView
                android:id="@+id/photo_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/image_details_size"
                app:layout_constraintStart_toEndOf="@id/photo_date_label"
                app:layout_constraintTop_toTopOf="@id/photo_date_label"
                tools:text="@string/placeholder_date" />

            <TextView
                android:id="@+id/photo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:textColor="@color/text_color_description"
                android:textSize="@dimen/image_details_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_date"
                tools:text="@string/placeholder_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>